--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.11.1",
     "@mantine/carousel": "^6.0.19",
     "@mantine/core": "^6.0.19",
+    "@mantine/form": "^7.2.1",
     "@mantine/hooks": "^6.0.19",
     "@react-icons/all-files": "^4.1.0",
     "@tabler/icons-react": "^2.34.0",
@@ -22,8 +23,11 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-scripts": "5.0.1",
+    "react-simply-carousel": "^9.0.5",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-redux": "^8.0.5",
+    "@reduxjs/toolkit": "^1.9.5"
   },
   "scripts": {
     "predeploy": "npm run build",
