changed homepage location

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://letsgetthismoney.github.io/heizung-gh-pages",
+  "homepage": "",
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
