--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.11.1",
-    "@mantine/carousel": "^6.0.19",
-    "@mantine/core": "^6.0.19",
-    "@mantine/form": "^7.2.1",
-    "@mantine/hooks": "^6.0.19",
+    "@mantine/core": "^7.2.2",
+    "@mantine/form": "^7.2.2",
+    "@mantine/hooks": "^7.2.2",
+    "@mantine/notifications": "^7.2.2",
+    "@mantine/tiptap": "^7.2.2",
     "@react-icons/all-files": "^4.1.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "@tabler/icons-react": "^2.34.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -22,12 +24,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "react-simply-carousel": "^9.0.5",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "react-redux": "^8.0.5",
-    "@reduxjs/toolkit": "^1.9.5"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "predeploy": "npm run build",
